--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 Curso_Introductorio_Python_v1_2.ipynb
 simulacion_montecarlo/calculo_riesgos/~$calculo_riesgos.xlsm
+simulacion_montecarlo/calculo_riesgos.zip
